Adds Jasmine test infra.
This introduces a single Jasmine test just to verify that it is working. It also includes a new TypeScript project for compiling test code to a separate directory so they aren't shipped to NPM. I also added a solution-style tsconfig so Jasmine types are limited to test files.

Test files are simply built before execting Jasmine. This means there is no fancy live-reload system, but I don't think that is too important for a project of this size.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "dist/public.js",
   "types": "dist/public.d.ts",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc -p tsconfig-lib.json",
+    "build:test": "tsc -p tsconfig-test.json",
+    "test": "npm run -s build:test && jasmine --config=jasmine.json"
   },
   "repository": {
     "type": "git",
@@ -23,6 +25,8 @@
   },
   "homepage": "https://github.com/dgp1130/ctor-exp#readme",
   "devDependencies": {
+    "@types/jasmine": "^3.6.0",
+    "jasmine": "^3.6.2",
     "typescript": "^4.0.5"
   }
 }
