Cleans project before tests to make sure data from the previous run is not left over.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "tsc -p tsconfig-lib.json",
     "build:test": "tsc -p tsconfig-test.json",
-    "test": "npm run -s build:test && jasmine --config=jasmine.json"
+    "test": "npm run -s clean && npm run -s build:test && jasmine --config=jasmine.json",
+    "clean": "rm -rf dist/ test/"
   },
   "repository": {
     "type": "git",
